Adapted A4 paper geometry.
Change-Id: Idb9b2d0ab1733f5dc0ecb46277e68f5912a5de45

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -15,6 +15,7 @@
 \pagestyle{myheadings}
 \patchcmd{\chapter}{\thispagestyle{plain}}{\thispagestyle{myheadings}}{}{}
 \patchcmd{\part}{\thispagestyle{plain}}{\thispagestyle{myheadings}}{}{}
+\usepackage[top=0.75in,bottom=0.75in,outer=0.75in,inner=0.75in,pdftex]{geometry}
 }
 \usepackage[utf8]{inputenc}
 \usepackage[american]{babel}
